--- a/app/globals.css
+++ b/app/globals.css
@@ -5,5 +5,72 @@
 html,
 body,
 :root {
-  height: 100%;
+  height: 100dvh;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #bed4fc;
+  border-bottom-color: #377af6;
+  /* border: 4px solid #e5e7eb;
+  border-bottom-color: #4b5563; */
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 0.7s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip:before {
+  content: attr(data-text);
+
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 105%;
+  margin-right: 6px;
+
+  padding: 7px 10px;
+  border-radius: 10px;
+  background: #323436;
+  color: #d7d8dd;
+  font-size: 0.8rem;
+  text-align: center;
+
+  display: none;
+
+  z-index: 100;
+}
+
+.tooltip:after {
+  content: "";
+  position: absolute;
+
+  left: -12px;
+
+  top: 50%;
+  transform: translateY(-50%);
+
+  border: 10px solid #323436;
+  border-color: transparent transparent transparent #323436;
+
+  display: none;
+}
+
+.tooltip:hover:before,
+.tooltip:hover:after {
+  display: block;
 }
